--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-scripts": "1.0.14",
-    "tachyons": "^4.8.1"
+    "tachyons": "^4.8.1",
+    "vanilla-tilt": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
