--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
+    "redux": "^3.7.2",
     "tachyons": "^4.8.1",
     "vanilla-tilt": "^1.4.1"
   },
