--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.14",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "tachyons": "^4.8.1",
     "vanilla-tilt": "^1.4.1"
   },
@@ -18,5 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.2"
   }
 }
